syntax = "proto2";

import "common.proto";

package udfs.proto;

message Operation {
    enum OpCode {
        WRITE_BLOCK = 0;
        READ_BLOCK = 1;
    }

    required OpCode op = 1;
}

message ReadBlockOperation {
    required Block block = 1;
}

message WriteBlockOperation {
    required Block block = 1;
    repeated string targets = 2;
}

message WriteBlockResponse {
    required bool success = 1;
    required Block block = 2;
    repeated string locations = 3;
}

message Packet {
    required uint64 size = 1;
    required bool last = 2;
}
